package products;

public interface Cup {
    void fill(String beverage);
}
