package products;

public class HomeCoaster implements Lid {
    @Override
    public void cover() {
        System.out.println("Usando posavasos (equivalente a 'tapa' en casa)");
    }
}
