package products;

public interface Lid {
    void cover();
}
