package products;

public class ToGoLid implements Lid {
    @Override
    public void cover() {
        System.out.println("Colocando tapa de plástico para llevar");
    }
}
